--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "prod": "next dev",
+    "prod": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-api:dev": "cross-env NODE_ENV=development npx orval",
+    "generate-api:prod": "cross-env NODE_ENV=production npx orval"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.1",
@@ -26,6 +28,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.7",
     "orval": "^7.5.0",
     "typescript": "^5"
   }
